<resources>
    <string name="app_name">BgRem</string>
    <string name="title_of_start_page">Automatic background replacement</string>
    <string name="start_button">start</string>
    <string name="i_agree">Getting started, I agree with</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="info_title">Зачем Вам BgRem</string>
    <string name="info_text">BgRem автоматически уберет фон у видео или фото</string>
    <string name="info_slogan">Измените Ваше видео и фото с</string>
    <string name="info_support">Если остались вопросы или есть предложения,</string>
    <string name="write">пишите -</string>
    <string name="email" translatable="false">support@deelvin.com</string>
    <string name="version_name">Версия</string>
    <string name="version_number" translatable="false">1.0.1</string>
    <string name="main_text">Загрузите файл</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="cancel">Отменить</string>
    <string name="bg" translatable="false">Bg</string>
    <string name="rem" translatable="false">Rem</string>
    <string name="splash_title">Автоматическая замена фона</string>
    <string name="splash_text"><![CDATA[Видео & Фото]]></string>
    <string name="note_title">Примечание.</string>
    <string name="note_text">Длина видео - до 30 секунд</string>
    <string name="select_background">Выберете фон</string>
    <string name="next_step">Далее</string>
    <string name="without_background">нет фона</string>
    <string name="user_background">ваш фон</string>
    <string name="color_background">цвет</string>
    <string name="picture_background">картинка</string>
    <string name="upload_background">Загрузить фон</string>
</resources>