<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".pages.SplashPage">

    <ImageView
        android:layout_marginTop="80dp"
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem"
            android:textSize="28sp"/>
        <TextView
            android:id="@+id/bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bg"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginBottom="450dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:textStyle="bold"
        android:textSize="32sp"/>

</LinearLayout>