<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_icon_background"
        android:padding="8dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/gallery_icon"
        app:layout_constraintEnd_toStartOf="@id/camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_icon_background"
        android:padding="8dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/camera_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gallery_button" />

    <TextView
        android:id="@+id/gallery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintTop_toBottomOf="@id/gallery_button"
        app:layout_constraintStart_toStartOf="@id/gallery_button"
        app:layout_constraintEnd_toEndOf="@id/gallery_button"/>

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@id/camera_button"
        app:layout_constraintStart_toStartOf="@id/camera_button"
        app:layout_constraintEnd_toEndOf="@id/camera_button"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/light_gray_background_shape"
        android:text="@string/cancel"

        android:paddingHorizontal="90dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/gallery_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>